fix:list app menu from setting, sort menu dropdown pos,roomlist overflow

--- a/apps/meteor/app/theme/client/imports/components/sidebar/rooms-list.css
+++ b/apps/meteor/app/theme/client/imports/components/sidebar/rooms-list.css
@@ -4,7 +4,7 @@
 	/* display: flex; */
 
 	overflow-x: hidden;
-	overflow-y: hidden;
+	overflow-y: auto;
 
 	flex: 1 1 auto;
 
